added Spanish language stub

--- a/app/views/common/loginForm.html
+++ b/app/views/common/loginForm.html
@@ -31,6 +31,12 @@
               <span class="lang-short">VN</span><span class="lang-label">tiếng Việt</span>
             </a>
           </li>
+          <li role="menuitem">
+            <a href="" data-ng-click="loginVm.changeLoginLanguage(loginVm.lsAppConfig.lang.es)">
+              <span class="flag-icon flag-icon-es"></span>
+              <span class="lang-short">ES</span><span class="lang-label">Spanish</span>
+            </a>
+          </li>
         </ul>
       </div>
     </div>
